unpackaged/main/default/objects/Account/fields/per_Transaction_Commercial_Structure__c.field-meta.xml
<CustomField>
    <fullName>per_Transaction_Commercial_Structure__c</fullName>
    <label>Commercial Structure - % per Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>