unpackaged/main/default/objects/Account/fields/Preferred_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Buildings__c</fullName>
    <label>Preferred Buildings</label>
    <type>TextArea</type>
</CustomField>