unpackaged/main/default/objects/Account/fields/Preferred_Connectivity__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Connectivity__c</fullName>
    <description>Captures the partner&#39;s preferred connectivity route to guide the integration process and ensure alignment with their preferences.</description>
    <inlineHelpText>Specifies the partner&#39;s preferred method for connecting their property data (e.g., PMS, Channel Manager, or Other).</inlineHelpText>
    <label>Preferred Connectivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Connectivity_Routes</valueSetName>
    </valueSet>
</CustomField>