unpackaged/main/default/objects/Account/fields/Preferred_Connectivity_Other__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Connectivity_Other__c</fullName>
    <description>Used when the partner’s preferred method of connectivity does not align with the standard options (PMS, Channel Manager, or Manual Upload). This may include custom integrations or other unique solutions.</description>
    <inlineHelpText>Use this box if the partner’s preferred connectivity method does not fall under Property Management System (PMS), Channel Manager, or Manual Upload. This option is for non-standard or unique methods.</inlineHelpText>
    <label>Preferred Connectivity (Other)</label>
    <type>TextArea</type>
</CustomField>