unpackaged/main/default/objects/Account/fields/Preferred_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Suppliers__c</fullName>
    <label>Preferred Suppliers</label>
    <type>TextArea</type>
</CustomField>