unpackaged/main/default/objects/Account/fields/Property_Management_Systems__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Systems__c</fullName>
    <description>Tracks the property management systems (PMS) used by the partner, selected from a global list.</description>
    <inlineHelpText>Select the property management system (PMS) the partner uses. If not listed, specify details in the &#39;Other&#39; field.</inlineHelpText>
    <label>Property Management Systems</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Management_Systems</valueSetName>
    </valueSet>
</CustomField>