unpackaged/main/default/objects/Account/fields/Property_Management_Systems_Other__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Systems_Other__c</fullName>
    <description>Captures additional property management systems not included in the predefined global list.</description>
    <inlineHelpText>Enter details of any other property management systems used by the partner that are not included in the global list.</inlineHelpText>
    <label>Property Management Systems (Other)</label>
    <type>TextArea</type>
</CustomField>