unpackaged/main/default/objects/Account/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aparthotel</fullName>
            </value>
            <value>
                <fullName>SITU Co Living</fullName>
            </value>
            <value>
                <fullName>Vacation Rental</fullName>
            </value>
            <value>
                <fullName>Alternative Accommodation</fullName>
            </value>
            <value>
                <fullName>Dedicated Apartment Building</fullName>
            </value>
            <value>
                <fullName>Residential Building</fullName>
            </value>
            <value>
                <fullName>SITU Bespoke</fullName>
            </value>
            <value>
                <fullName>Not Set</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>