unpackaged/main/default/objects/Account/fields/Property_Types__c.field-meta.xml
<CustomField>
    <fullName>Property_Types__c</fullName>
    <description>These are the types of properties our partners operate. Identifies the type(s) of property associated with the partner. Use this field to segment partners by property type for reporting and marketing purposes.</description>
    <inlineHelpText>Select all the property types that the partner operates.</inlineHelpText>
    <label>Property Types</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Types</valueSetName>
    </valueSet>
</CustomField>