unpackaged/main/default/objects/Account/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <description>List of wider world regions. Indicates the geographic regions associated with the partner. Use this field to segment partners by region for reporting and marketing purposes.</description>
    <inlineHelpText>Select all the regions where the partner is located or operates.</inlineHelpText>
    <label>Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regions</valueSetName>
    </valueSet>
</CustomField>