unpackaged/main/default/objects/Account/fields/Registered_Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Registered_Company_Number__c</fullName>
    <description>The official registration number of the partner’s business, as assigned by the relevant governing body.</description>
    <inlineHelpText>Please enter the company&#39;s registration number. This unique identifier is assigned to a company by the relevant government or official registry.</inlineHelpText>
    <label>Registered Company Number</label>
    <type>TextArea</type>
</CustomField>