unpackaged/main/default/objects/Account/fields/Regular_Search_Locations__c.field-meta.xml
<CustomField>
    <fullName>Regular_Search_Locations__c</fullName>
    <label>Regular Search Locations</label>
    <type>TextArea</type>
</CustomField>