unpackaged/main/default/objects/Account/fields/Requires_Gas_Certificate_to_Book__c.field-meta.xml
<CustomField>
    <fullName>Requires_Gas_Certificate_to_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires GS &amp; PL to Book</label>
    <type>Checkbox</type>
</CustomField>