unpackaged/main/default/objects/Account/fields/Revenue_Last_Month_Child_NEW__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Last_Month_Child_NEW__c</fullName>
    <label>Revenue Last Month Child NEW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>