unpackaged/main/default/objects/Account/fields/Revenue_Last_Year_Child_NEW__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Last_Year_Child_NEW__c</fullName>
    <label>Revenue Last Year Child NEW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>