unpackaged/main/default/objects/Account/fields/Revenue_Next_Month_NEW__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Next_Month_NEW__c</fullName>
    <label>Revenue Next Month NEW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>