unpackaged/main/default/objects/Account/fields/Revenue_This_Quarter_Last_Year_NEW__c.field-meta.xml
<CustomField>
    <fullName>Revenue_This_Quarter_Last_Year_NEW__c</fullName>
    <label>Revenue This Quarter Last Year NEW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>