unpackaged/main/default/objects/Account/fields/Revenue_This_Year_Child_NEW__c.field-meta.xml
<CustomField>
    <fullName>Revenue_This_Year_Child_NEW__c</fullName>
    <label>Revenue This Year Child NEW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>