unpackaged/main/default/objects/Account/fields/Satisfactory_Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Satisfactory_Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Satisfactory Credit Check</label>
    <type>Checkbox</type>
</CustomField>