unpackaged/main/default/objects/Account/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small/Ad-hoc</fullName>
            </value>
            <value>
                <fullName>City/Regional</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>International/Global</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>