unpackaged/main/default/objects/Account/fields/SOP_And_if_so_how_known_to_client__c.field-meta.xml
<CustomField>
    <fullName>SOP_And_if_so_how_known_to_client__c</fullName>
    <label>And if so how known to client?</label>
    <type>TextArea</type>
</CustomField>