unpackaged/main/default/objects/Account/fields/SOP_Booking_fee_or_commission_split__c.field-meta.xml
<CustomField>
    <fullName>SOP_Booking_fee_or_commission_split__c</fullName>
    <label>If yes Booking fee or commission split?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commission Split</fullName>
            </value>
            <value>
                <fullName>Booking Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>