unpackaged/main/default/objects/Account/fields/SOP_Branded_Quotes__c.field-meta.xml
<CustomField>
    <fullName>SOP_Branded_Quotes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Branded Quotes</label>
    <type>Checkbox</type>
</CustomField>