unpackaged/main/default/objects/Account/fields/SOP_Can_client_be_contacted_OOH__c.field-meta.xml
<CustomField>
    <fullName>SOP_Can_client_be_contacted_OOH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can client be contacted OOH</label>
    <type>Checkbox</type>
</CustomField>