unpackaged/main/default/objects/Account/fields/SOP_Check_in_details_sent_to__c.field-meta.xml
<CustomField>
    <fullName>SOP_Check_in_details_sent_to__c</fullName>
    <label>Check in details sent to?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Booker</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>