unpackaged/main/default/objects/Account/fields/SOP_Client_Commission_Details_what__c.field-meta.xml
<CustomField>
    <fullName>SOP_Client_Commission_Details_what__c</fullName>
    <label>Client Commission Details (what %?)</label>
    <type>TextArea</type>
</CustomField>