unpackaged/main/default/objects/Account/fields/SOP_Commission_Required__c.field-meta.xml
<CustomField>
    <fullName>SOP_Commission_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commission Required</label>
    <type>Checkbox</type>
</CustomField>