unpackaged/main/default/objects/Account/fields/SOP_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>SOP_Contact_Email__c</fullName>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>