unpackaged/main/default/objects/Account/fields/SOP_Deposits_need_to_be_mentioned__c.field-meta.xml
<CustomField>
    <fullName>SOP_Deposits_need_to_be_mentioned__c</fullName>
    <label>Deposits need to be mentioned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covered by client</fullName>
            </value>
            <value>
                <fullName>Covered by Situ</fullName>
            </value>
            <value>
                <fullName>Covered by Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>