unpackaged/main/default/objects/Account/fields/SOP_Enquiry_Process_Notes__c.field-meta.xml
<CustomField>
    <fullName>SOP_Enquiry_Process_Notes__c</fullName>
    <inlineHelpText>Insert notes if applicable</inlineHelpText>
    <label>SOP - Enquiry Process Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>