unpackaged/main/default/objects/Account/fields/SOP_Extension_process_OOH__c.field-meta.xml
<CustomField>
    <fullName>SOP_Extension_process_OOH__c</fullName>
    <label>Extension process OOH</label>
    <type>TextArea</type>
</CustomField>