unpackaged/main/default/objects/Account/fields/SOP_Guest_details_required__c.field-meta.xml
<CustomField>
    <fullName>SOP_Guest_details_required__c</fullName>
    <label>Guest details required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arrival Time</fullName>
            </value>
            <value>
                <fullName>Phone Number</fullName>
            </value>
            <value>
                <fullName>Email Address</fullName>
            </value>
            <value>
                <fullName>Flight Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>