unpackaged/main/default/objects/Account/fields/SOP_Hints_and_Tips__c.field-meta.xml
<CustomField>
    <fullName>SOP_Hints_and_Tips__c</fullName>
    <label>Hints and Tips</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>