unpackaged/main/default/objects/Account/fields/SOP_Information_Required_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>SOP_Information_Required_on_Quote__c</fullName>
    <label>Information Required on Quote</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>