unpackaged/main/default/objects/Account/fields/SOP_Invoice_Recipient_Details__c.field-meta.xml
<CustomField>
    <fullName>SOP_Invoice_Recipient_Details__c</fullName>
    <label>Invoice Recipient Details</label>
    <type>Email</type>
</CustomField>