unpackaged/main/default/objects/Account/fields/SOP_Monthly_MI_Required__c.field-meta.xml
<CustomField>
    <fullName>SOP_Monthly_MI_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Yes please add document to files</inlineHelpText>
    <label>Monthly MI Required </label>
    <type>Checkbox</type>
</CustomField>