unpackaged/main/default/objects/Account/fields/SOP_Must_Not_Haves__c.field-meta.xml
<CustomField>
    <fullName>SOP_Must_Not_Haves__c</fullName>
    <label>Must Not Haves</label>
    <type>TextArea</type>
</CustomField>