unpackaged/main/default/objects/Account/fields/SOP_Number_of_Options__c.field-meta.xml
<CustomField>
    <fullName>SOP_Number_of_Options__c</fullName>
    <label>Number of Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>