unpackaged/main/default/objects/Account/fields/SOP_Order_Reference_Required__c.field-meta.xml
<CustomField>
    <fullName>SOP_Order_Reference_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Reference Required?</label>
    <type>Checkbox</type>
</CustomField>