unpackaged/main/default/objects/Account/fields/SOP_Other_booking_comments__c.field-meta.xml
<CustomField>
    <fullName>SOP_Other_booking_comments__c</fullName>
    <label>Other booking comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>