unpackaged/main/default/objects/Account/fields/SOP_Other_quote_comments__c.field-meta.xml
<CustomField>
    <fullName>SOP_Other_quote_comments__c</fullName>
    <label>Other quote comments:</label>
    <type>TextArea</type>
</CustomField>