unpackaged/main/default/objects/Account/fields/SOP_Pricing_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>SOP_Pricing_Breakdown__c</fullName>
    <label>Pricing Breakdown</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nightly Exc Tax (UK)</fullName>
            </value>
            <value>
                <fullName>Nightly Inc Tax (UK)</fullName>
            </value>
            <value>
                <fullName>Nightly Exc Tax (Intl.)</fullName>
            </value>
            <value>
                <fullName>Nightly Inc Tax (Intl.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>