unpackaged/main/default/objects/Account/fields/SOP_Quote_Format__c.field-meta.xml
<CustomField>
    <fullName>SOP_Quote_Format__c</fullName>
    <label>Quote Format</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>