unpackaged/main/default/objects/Account/fields/SOP_Split_Monthly_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>SOP_Split_Monthly_Invoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Monthly Invoicing?</label>
    <type>Checkbox</type>
</CustomField>