unpackaged/main/default/objects/Account/fields/SOP_Term_used_to_reference_guest__c.field-meta.xml
<CustomField>
    <fullName>SOP_Term_used_to_reference_guest__c</fullName>
    <label>Term used to reference guest:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Guest</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Policyholder</fullName>
            </value>
            <value>
                <fullName>Assignee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>