unpackaged/main/default/objects/Account/fields/SOP_When_is_the_invoice_sent__c.field-meta.xml
<CustomField>
    <fullName>SOP_When_is_the_invoice_sent__c</fullName>
    <label>When is the invoice sent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoice Creation Date</fullName>
            </value>
            <value>
                <fullName>Check in Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>