unpackaged/main/default/objects/Account/fields/SOP_Where_is_it_Sent__c.field-meta.xml
<CustomField>
    <fullName>SOP_Where_is_it_Sent__c</fullName>
    <label>Where is it Sent?</label>
    <type>TextArea</type>
</CustomField>