unpackaged/main/default/objects/Account/fields/SOP_Who_completes_MI__c.field-meta.xml
<CustomField>
    <fullName>SOP_Who_completes_MI__c</fullName>
    <label>Who completes MI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>