unpackaged/main/default/objects/Account/fields/SOPClientemail_address_to_be_copied_i__c.field-meta.xml
<CustomField>
    <fullName>SOPClientemail_address_to_be_copied_i__c</fullName>
    <label>Client / AM email address to be copied i</label>
    <type>Email</type>
</CustomField>