unpackaged/main/default/objects/Account/fields/SOPEnquiry_Process__c.field-meta.xml
<CustomField>
    <fullName>SOPEnquiry_Process__c</fullName>
    <description>Select all that apply</description>
    <inlineHelpText>Phone, Email, Enquiry Platform</inlineHelpText>
    <label>SOP - Enquiry Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Email Address</fullName>
            </value>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>