unpackaged/main/default/objects/Account/fields/SP_User_Name__c.field-meta.xml
<CustomField>
    <fullName>SP_User_Name__c</fullName>
    <label>SP User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>