unpackaged/main/default/objects/Account/fields/Static_Content_Included__c.field-meta.xml
<CustomField>
    <fullName>Static_Content_Included__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Static Content Included</label>
    <type>Checkbox</type>
</CustomField>