unpackaged/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Set</fullName>
            </value>
            <value>
                <fullName>Database Partner</fullName>
            </value>
            <value>
                <fullName>Listed Partner</fullName>
            </value>
            <value>
                <fullName>SITU Assured</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Listing Partner</fullName>
            </value>
            <value>
                <fullName>DESTINATION</fullName>
            </value>
            <value>
                <fullName>New Not Visited</fullName>
            </value>
            <value>
                <fullName>New Visited</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Trusted Not Yet Visited</fullName>
            </value>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>