unpackaged/main/default/objects/Account/fields/Stock_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Stock_Breakdown__c</fullName>
    <description>Provides a summary or breakdown of the partner’s property stock, such as unit type or quantity.</description>
    <inlineHelpText>Enter details about the partner’s stock, such as unit types and their quantities.</inlineHelpText>
    <label>Stock Breakdown</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>