unpackaged/main/default/objects/Account/fields/SupplierID__c.field-meta.xml
<CustomField>
    <fullName>SupplierID__c</fullName>
    <externalId>true</externalId>
    <label>SupplierID</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>