unpackaged/main/default/objects/Account/fields/Suppliers_Not_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Suppliers_Not_to_Contact__c</fullName>
    <label>Suppliers Not to Contact</label>
    <type>TextArea</type>
</CustomField>