unpackaged/main/default/objects/Account/fields/Tax_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Tax_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if tax is applicable to the cost of the partner’s accommodation.</description>
    <inlineHelpText>Check this box if tax (e.g., VAT, GST) is applicable to your accommodation costs.</inlineHelpText>
    <label>Tax Applicable</label>
    <type>Checkbox</type>
</CustomField>