unpackaged/main/default/objects/Account/fields/Tax_Format__c.field-meta.xml
<CustomField>
    <fullName>Tax_Format__c</fullName>
    <description>Defines the VAT model applied by the partner for stays of 29 nights or longer. UK only.</description>
    <inlineHelpText>Select the VAT model used for stays of 29 nights or longer to ensure compliance and accurate invoicing. UK only.</inlineHelpText>
    <label>Tax Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drop 4% (Reduced Value Rule - VAT on 20% of the total)</fullName>
            </value>
            <value>
                <fullName>Drop 0% (Minimal services, VAT on additional services only)</fullName>
            </value>
            <value>
                <fullName>No Drop (Standard VAT on full value)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>