unpackaged/main/default/objects/Account/fields/Tax_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Registration_Number__c</fullName>
    <description>Stores the partner’s tax registration number (e.g., VAT, GST).</description>
    <inlineHelpText>Enter the partner&#39;s Tax Registration Number (e.g., VAT, GST). This field is required if &#39;Is Tax Applicable&#39; is Yes.</inlineHelpText>
    <label>Tax Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>