unpackaged/main/default/objects/Account/fields/Tech_Info__c.field-meta.xml
<CustomField>
    <fullName>Tech_Info__c</fullName>
    <label>Tech Connections</label>
    <type>TextArea</type>
</CustomField>