unpackaged/main/default/objects/Account/fields/Terms_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Terms_of_Stay__c</fullName>
    <description>These are the partner&#39;s terms of stay, which include terms and conditions related to their accommodations and policies/requirements for guests during their stay.</description>
    <inlineHelpText>Enter the full terms of stay applicable to the partner’s accommodations. This field supports up to 20,000 characters.</inlineHelpText>
    <label>Terms of Stay</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>