unpackaged/main/default/objects/Account/fields/Terms_SLA_Signed__c.field-meta.xml
<CustomField>
    <fullName>Terms_SLA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms/SLA Signed</label>
    <type>Checkbox</type>
</CustomField>