unpackaged/main/default/objects/Account/fields/This_Month_Revenue__c.field-meta.xml
<CustomField>
    <fullName>This_Month_Revenue__c</fullName>
    <label>Revenue This Month</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>