unpackaged/main/default/objects/Account/fields/This_Year_Conversion__c.field-meta.xml
<CustomField>
    <fullName>This_Year_Conversion__c</fullName>
    <formula>Bookings_This_Year_NEW__c  / Enquiries_This_Year_NEW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>This Year Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>