unpackaged/main/default/objects/Account/fields/This_Year_SITU_Revenue__c.field-meta.xml
<CustomField>
    <fullName>This_Year_SITU_Revenue__c</fullName>
    <label>This Year SITU Revenue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>